--- a/home.html
+++ b/home.html
@@ -13,8 +13,23 @@
 </head>
 
 <body>
+    <header>
 
-
+    </header>
+    <section>
+        <div class="green"></div>
+        <img src="/img/home-1.png" alt="" class="home-img home-img1">
+        <img src="/img/home-2.png" alt="" class="home-img home-img2">
+        <img src="/img/home-3.png" alt="" class="home-img home-img3">
+        <div class="container home">
+            <h1 class="home__heading--h1">character style <br> artwork <br> creativity
+            </h1>
+            <div class="home__content">
+                <p>Explore Islamic & Middle Eastern Art, Saudi <br> Culture & More At Ithraa Museum.</p>
+                <a href="">book your visit now</a>
+            </div>
+        </div>
+    </section>
 
 
 
